# ConvertirPDF

backend/: pyproject.toml
backend/backend/: main.py
backend/backend/Converters/: Bac.py  GyT.py
backend/backend/uploads/: 8. E.C. Banco GT GO Dist. - Agosto 2024 - quetzales.xlsx  9. E.C. Banco GT GO Dist. - Septiembre 2024 - quetzales.xlsx  9. EC Banco BAC - ALCERVA - Septiembre 2024 (1) (1).xlsx  9. EC Banco BAC - ALCERVA - Septiembre 2024 (1).xlsx  9. EC Banco BAC - ALCERVA - Septiembre 2024.xlsx
frontend/: index.html
frontend/src/: App.jsx  index.css
